--- a/catalogo/style.css
+++ b/catalogo/style.css
@@ -5,14 +5,18 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+body {
+    position: relative;
+
+}
 
 main {
     padding: 15px;
 
     width: 100%;
     max-width: 700px;
-    margin: 50px auto;
-
+    margin: auto;
+    padding: 50px;
 }
 
 main .section-form {
@@ -28,32 +32,35 @@ main .section-form form {
     border-radius: 25px;
     background-color: rgb(222, 222, 222);
     padding: 10px;
-    display:flex;
+    display: flex;
     gap: 10px;
 
     width: 100%;
 
 }
-@media (max-width: 500px){
+
+@media (max-width: 500px) {
 
     main {
-    padding: 15px;
+        padding: 15px;
 
-    width: 100%;
-    max-width: 700px;
-    margin: 15px auto;
+        width: 100%;
+        max-width: 700px;
 
-}
+        margin: auto;
+        padding: 15px
+    }
+
     main .section-form form {
-    border-radius: 25px;
-    background-color: rgb(222, 222, 222);
-    padding: 10px;
-    display:grid;
-    gap: 10px;
+        border-radius: 25px;
+        background-color: rgb(222, 222, 222);
+        padding: 10px;
+        display: grid;
+        gap: 10px;
 
-    width: 100%;
+        width: 100%;
 
-}
+    }
 }
 
 main .section-form form label {
@@ -90,7 +97,7 @@ main .section-form form button {
     background-color: blue;
     color: white;
     border-radius: 30px;
-font-size: larger;
+    font-size: larger;
     min-width: 58px;
     padding: 10px;
 }
@@ -122,3 +129,105 @@ article .div-preco-x button {
     border: none;
 
 }
+
+.div-fundo {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+
+    background-color: rgba(0, 0, 0, 0.434);
+
+}
+
+
+.div-fundo .banner {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    max-width: 350px;
+    border-radius: 20px;
+    padding: 35px;
+}
+
+.div-fundo .banner p {
+    text-align: center;
+    font-size: large;
+    opacity: 0.6;
+    margin-bottom: 15px;
+}
+
+.div-rolo {
+    display: flex;
+
+
+    gap: 8px;
+}
+
+.btnsim,
+.btncancelar {
+
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+    padding: 15px 30px;
+    border-radius: 20px;
+    color: white;
+    background-color: rgb(104, 104, 255);
+}
+
+.btnsim {
+    border: none;
+    width: 100%;
+
+
+    color: white;
+    background-color: rgb(235, 57, 57);
+}
+
+@media(max-width: 500px) {
+
+
+
+    .div-fundo .banner {
+        top: unset;
+        transform: unset;
+        left: 0;
+        height: 200px;
+        width: 100%;
+        border-radius: 20px 20px 0 0;
+        max-width: 100%;
+        bottom: 0;
+
+        padding: 18px;
+    }
+
+    .div-rolo {
+        display: flex;
+        flex-direction: column;
+
+        gap: 8px;
+    }
+
+
+
+    .btncancelar {
+
+        font-weight: bold;
+        cursor: pointer;
+        border: none;
+        width: 100%;
+        padding: 15px 30px;
+        border-radius: 20px;
+        color: rgb(0, 29, 192);
+        background-color: rgb(255, 255, 255);
+    }
+
+}
+
+
+
