--- a/catalogo/style.css
+++ b/catalogo/style.css
@@ -132,7 +132,7 @@ article .div-preco-x button {
 
 .div-fundo {
     display: none;
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100vh;
 
@@ -191,7 +191,15 @@ article .div-preco-x button {
 
 @media(max-width: 500px) {
 
+.div-fundo {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
 
+    background-color: rgba(0, 0, 0, 0.434);
+
+}
 
     .div-fundo .banner {
         top: unset;
